--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<link href="index.css" type="text/css" rel="stylesheet" />
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tips for Financial Cybersecurity</title>
+    <link href="index.css" rel="stylesheet">
   </head>
 
   <body>
@@ -62,10 +64,10 @@
         <li>Missing funds or securities: unexpected depletion of assets.</li>
         <li>
           Unauthorized account changes: address, email, or phone number updates
-          you didn’t make.
+          you didn't make.
         </li>
         <li>
-          Unexpected notifications: alerts about changes you didn’t request.
+          Unexpected notifications: alerts about changes you didn't request.
         </li>
         <li>
           Missing financial documents: statements or confirmations not received.
@@ -89,7 +91,7 @@
         <li>
           <strong>Protect Your Personal Information</strong>
           <p>
-            Don’t share sensitive information unless you verify the request.
+            Don't share sensitive information unless you verify the request.
           </p>
         </li>
         <li>
